# embodied-datahub

./: .gitignore  README.md  package-lock.json  package.json
cli/: README.md  pyproject.toml  requirements.txt
cli/datahub/: __init__.py  api.py  cli.py  config.py  cos.py  parquet_preview.py
public/downloads/: embodied_datahub_cli-0.1.0-py3-none-any.whl
src/app/: layout.tsx  page.tsx
src/app/(main)/: layout.tsx  not-found.tsx  page.tsx
src/app/(main)/datasets/[id]/: dataset-detail-client.tsx  page.tsx
src/app/(main)/models/: page.tsx
src/app/admin/: page.tsx
src/app/admin/login/: page.tsx
src/app/api/auth/check/: route.ts
src/app/api/auth/login/: route.ts
src/app/api/datasets/: route.ts
src/app/api/datasets/[id]/: route.ts
src/app/api/datasets/[id]/files/: route.ts
src/app/api/datasets/[id]/files/preview/: route.ts
src/app/api/datasets/[id]/upload-complete/: route.ts
src/app/datasets/[id]/: page.tsx
src/components/admin/: admin-dashboard.tsx  dataset-form.tsx
src/components/dataset/: dataset-card.tsx  file-preview.tsx  file-tree.tsx  search-filters.tsx
src/components/home/: home-content.tsx
src/components/layout/: header.tsx
src/data/: datasets.ts
src/db/: datasets.ts  schema.sql  seed.ts
src/lib/: auth.ts  dataset-store.ts  oss.ts
src/types/: dataset.ts
